--- a/style.css
+++ b/style.css
@@ -1,37 +1,39 @@
-* {
-  box-sizing: border-box;
-}
-
-/* Create two equal columns that floats next to each other */
-#hkoa{
-  float: left;
-  clear:both;
-  margin:1%;
-}
-
-h1{
- font-family: 'Oswald', sans-serif;
- font-weight: 700;
-}
-p{
- font-family: 'Oswald', sans-serif;	
+body{
+  background-image: url(images/dog1.jpg);
+  
+  /* Background image is centered vertically and horizontally at all times */
+  background-position: center center;
+  
+  /* Background image doesn't tile */
+  background-repeat: no-repeat;
+  
+  /* Background image is fixed in the viewport so that it doesn't move when 
+     the content's height is greater than the image's height */
+  background-attachment: fixed;
+  
+  /* This is what makes the background image rescale based
+     on the container's size */
+  background-size: cover;
+  
+  /* Set a background color that will be displayed
+     while the background image is loading */
+  background-color: #464646;
+  }
 	
-}
-ul{
-	    list-style: none;
-		
-}
-
-.themovers {
-  position: relative;
-  right: 0;
-  transition: right ease 0.5s;
-}
-.themovers:hover {
-  right: -50px;
-}
-a{
-	text-decoration: none;
-	color:rgb(10,0,0)
-}
-	
+#text
+{
+   position: relative;
+  left: 50%;
+  top: 150px;
+  	
+text-shadow: 0px 1px, 1px 0px, 1px 1px;
+letter-spacing:1px;
+font-weight:10px;
+font-size:10px;
+ 
+                transform: translateX(-50%) translateY(-90%);
+                text-align: center;
+                font-family: Pacifico, Calibri;
+                font-size: 300%;
+				  color: white;
+}	
