--- a/style.css
+++ b/style.css
@@ -34,3 +34,35 @@ body{
                 font-size: 300%;
 				  color: white;
 }	
+@media only screen and (min-width: 320px) {
+	#text
+{
+   position: relative;
+  left: 50%;
+  top: 150px;
+
+
+ 
+                transform: translateX(-50%) translateY(-90%);
+                text-align: center;
+                font-family: Pacifico, Calibri;
+                font-size: 100%;
+				  color: white;
+}
+}
+@media only screen and (min-width: 600px) {
+	#text
+{
+   position: relative;
+  left: 50%;
+  top: 150px;
+
+
+ 
+                transform: translateX(-50%) translateY(-90%);
+                text-align: center;
+                font-family: Pacifico, Calibri;
+                font-size: 300%;
+				  color: white;
+}
+}
