--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body{
                 transform: translateX(-50%) translateY(-90%);
                 text-align: center;
                 font-family: Pacifico, Calibri;
-                font-size: 200%;
+                font-size: 10px;
 				  color: white;
 }
 }
