--- a/style.css
+++ b/style.css
@@ -46,11 +46,26 @@ body{
                 transform: translateX(-50%) translateY(-90%);
                 text-align: center;
                 font-family: Pacifico, Calibri;
-                font-size: 100px;
+                font-size: 50px;
+				  color: white;
+}
+	@media only screen and (min-width: 375px) {
+	#text
+{
+   position: relative;
+  left: 50%;
+  top: 150px;
+
+
+ 
+                transform: translateX(-50%) translateY(-90%);
+                text-align: center;
+                font-family: Pacifico, Calibri;
+                font-size: 300%;
 				  color: white;
 }
 }
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 1024px) {
 	#text
 {
    position: relative;
