--- a/style.css
+++ b/style.css
@@ -107,6 +107,79 @@ body{
 {
    position: relative;
   left: 50%;
+  top: 300px;
+
+
+ 
+                transform: translateX(-50%) translateY(-90%);
+                text-align: center;
+                font-family: Pacifico, Calibri;
+                font-size: 500%;
+				  color: white;
+}
+	body{
+  background-image: url(images/dog3.jpg);
+  
+  /* Background image is centered vertically and horizontally at all times */
+  background-position: center center;
+  
+  /* Background image doesn't tile */
+  background-repeat: no-repeat;
+  
+  /* Background image is fixed in the viewport so that it doesn't move when 
+     the content's height is greater than the image's height */
+  background-attachment: fixed;
+  
+  /* This is what makes the background image rescale based
+     on the container's size */
+  background-size: cover;
+  
+  /* Set a background color that will be displayed
+     while the background image is loading */
+  background-color: #464646;
+  }
+	@media only screen and (min-width: 2560px) {
+	#text
+{
+   position: relative;
+  left: 50%;
+  top: 300px;
+
+
+ 
+                transform: translateX(-50%) translateY(-90%);
+                text-align: center;
+                font-family: Pacifico, Calibri;
+                font-size: 400%;
+				  color: black;
+}
+	body{
+  background-image: url(images/dog3.jpg);
+  
+  /* Background image is centered vertically and horizontally at all times */
+  background-position: center center;
+  
+  /* Background image doesn't tile */
+  background-repeat: no-repeat;
+  
+  /* Background image is fixed in the viewport so that it doesn't move when 
+     the content's height is greater than the image's height */
+  background-attachment: fixed;
+  
+  /* This is what makes the background image rescale based
+     on the container's size */
+  background-size: cover;
+  
+  /* Set a background color that will be displayed
+     while the background image is loading */
+  background-color: #464646;
+  }
+}
+@media only screen and (min-width: 1440px) {
+	#text
+{
+   position: relative;
+  left: 50%;
   top: 500px;
 
 
