--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ body{
                 text-align: center;
                 font-family: Pacifico, Calibri;
                 font-size: 400%;
-				  color: black;
+				  color: white;
 }
 	body{
   background-image: url(images/dog3.jpg);
