--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body{
                 transform: translateX(-50%) translateY(-90%);
                 text-align: center;
 
-                font-size: 20px;
+                font-size: 100%;
 				  color: white;
 }
 	@media only screen and (min-width: 375px) {
