--- a/style.css
+++ b/style.css
@@ -54,15 +54,15 @@ body{
 {
    position: relative;
   left: 50%;
-  top: 130px;
+  top: 120px;
 
 
  
                 transform: translateX(-50%) translateY(-90%);
                 text-align: center;
 
-                font-size: 200%;
-				  color: white;
+                font-size: 150%;
+				  color: black;
 }
 }
 @media only screen and (min-width: 1024px) {
