--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
 {
    position: relative;
   left: 50%;
-  top: 150px;
+  top: 130px;
 
 
  
@@ -32,7 +32,7 @@ body{
                 text-align: center;
 
                 font-size: 300%;
-				  color: white;
+				  color: black;
 }	
 @media only screen and (min-width: 320px) {
 	#text
@@ -47,7 +47,7 @@ body{
                 text-align: center;
 
                 font-size: 100%;
-				  color: white;
+				  color: black;
 }
 	@media only screen and (min-width: 375px) {
 	#text
@@ -70,7 +70,7 @@ body{
 {
    position: relative;
   left: 50%;
-  top: 300px;
+  top: 180px;
 
 
  
@@ -78,7 +78,7 @@ body{
                 text-align: center;
 
                 font-size: 400%;
-				  color: white;
+				  color: black;
 }
 	body{
   background-image: url(images/dog3.jpg);
@@ -107,7 +107,7 @@ body{
 {
    position: relative;
   left: 50%;
-  top: 300px;
+  top: 180px;
 
 
  
@@ -115,7 +115,7 @@ body{
                 text-align: center;
 
                 font-size: 400%;
-				  color: white;
+				  color: black;
 }
 	body{
   background-image: url(images/dog3.jpg);
@@ -143,7 +143,7 @@ body{
 {
    position: relative;
   left: 50%;
-  top: 300px;
+  top: 180px;
 
 
  
@@ -151,7 +151,7 @@ body{
                 text-align: center;
 
                 font-size: 700%;
-				  color: white;
+				  color: black;
 }
 	body{
   background-image: url(images/dog3.jpg);
