--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
   background-color: #464646;
   }
 #fun_fact{
-	   position: relative;
+	   position: absolute;
 	  top: 100px;
 	font-size: 150%;
 }
