--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body{
 	border-bottom: 50px solid #555;
 	border-left: 25px solid transparent;
 
-height: 1000px%;
+height: 1000px;
 	width: 125px;
 }
 #fun_fact{
