--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ body{
     transform: rotate(90deg);
 	border-bottom: 50px solid #555;
 	border-left: 25px solid transparent;
-
-height: 1000px;
+ position: absolute;
+	  top: 90%;
 	width: 125px;
 }
 #fun_fact{
