--- a/style.css
+++ b/style.css
@@ -1,193 +1,69 @@
-
-
-#fun_fact{
-	   position: absolute;
-	  top: 90%;
-	font-size: 1000px;
+ #fun_fact{
+     position: absolute;
+     top: 90%;
+     font-size: 1000px;
 }
-#notebook
-{
-    margin-bottom: 1px;
-    margin-left : 1px;
-   
+ #notebook {
+     margin-bottom: 1px;
+     margin-left : 1px;
+     position: fixed;
+     bottom: 0;
+}
+ #text {
+     position: relative;
+     left: 50%;
+     top: 3.5em;
+     transform: translateX(-50%) translateY(-90%);
+     text-align: center;
+     font-size: 300%;
+     color: black;
+}
+ @media only screen and (min-width: 320px) {
+     body{
+         background-image: url(images/dog1.jpg);
+        /* Background image is centered vertically and horizontally at all times */
+         background-position: center center;
+        /* Background image doesn't tile */
+         background-repeat: no-repeat;
+        /* Background image is fixed in the viewport so that it doesn't move when the content's height is greater than the image's height */
+         background-attachment: fixed;
+        /* This is what makes the background image rescale based on the container's size */
+         background-size: cover;
+        /* Set a background color that will be displayed while the background image is loading */
+         background-color: #464646;
+    }
+     #text {
+         position: relative;
+         left: 50%;
+         top: 3.5em;
+         transform: translateX(-50%) translateY(-90%);
+         text-align: center;
+         font-size: 100%;
+         color: black;
+    }
+}
+ @media only screen and (min-width: 1024px) {
+     #text {
+         position: relative;
+         left: 50%;
+         top: 3.5em;
+         transform: translateX(-50%) translateY(-90%);
+         text-align: center;
+         font-size: 400%;
+         color: black;
+    }
+     body{
+         background-image: url(images/dog3.jpg);
+        /* Background image is centered vertically and horizontally at all times */
+         background-position: center center;
+        /* Background image doesn't tile */
+         background-repeat: no-repeat;
+        /* Background image is fixed in the viewport so that it doesn't move when the content's height is greater than the image's height */
+         background-attachment: fixed;
+        /* This is what makes the background image rescale based on the container's size */
+         background-size: cover;
+        /* Set a background color that will be displayed while the background image is loading */
+         background-color: #464646;
+    }
+}
  
-    position: fixed;
-    bottom: 0;
-}
-#text
-{
-   position: relative;
-  left: 50%;
-  top: 130px;
-
-
- 
-                transform: translateX(-50%) translateY(-90%);
-                text-align: center;
-
-                font-size: 300%;
-				  color: black;
-}	
-@media only screen and (min-width: 320px) {
-	#text
-{
-	body{
-  background-image: url(images/dog1.jpg);
-  
-  /* Background image is centered vertically and horizontally at all times */
-  background-position: center center;
-  
-  /* Background image doesn't tile */
-  background-repeat: no-repeat;
-  
-  /* Background image is fixed in the viewport so that it doesn't move when 
-     the content's height is greater than the image's height */
-  background-attachment: fixed;
-  
-  /* This is what makes the background image rescale based
-     on the container's size */
-  background-size: cover;
-  
-  /* Set a background color that will be displayed
-     while the background image is loading */
-  background-color: #464646;
-  }
-   position: relative;
-  left: 50%;
-  top: 100px;
-
-
- 
-                transform: translateX(-50%) translateY(-90%);
-                text-align: center;
-
-                font-size: 100%;
-				  color: black;
-}
-	@media only screen and (min-width: 375px) {
-	#text
-{
-   position: relative;
-  left: 50%;
-  top: 120px;
-
-
- 
-                transform: translateX(-50%) translateY(-90%);
-                text-align: center;
-
-                font-size: 150%;
-				  color: black;
-}
-}
-@media only screen and (min-width: 1024px) {
-	#text
-{
-   position: relative;
-  left: 50%;
-  top: 180px;
-
-
- 
-                transform: translateX(-50%) translateY(-90%);
-                text-align: center;
-
-                font-size: 400%;
-				  color: black;
-}
-	body{
-  background-image: url(images/dog3.jpg);
-  
-  /* Background image is centered vertically and horizontally at all times */
-  background-position: center center;
-  
-  /* Background image doesn't tile */
-  background-repeat: no-repeat;
-  
-  /* Background image is fixed in the viewport so that it doesn't move when 
-     the content's height is greater than the image's height */
-  background-attachment: fixed;
-  
-  /* This is what makes the background image rescale based
-     on the container's size */
-  background-size: cover;
-  
-  /* Set a background color that will be displayed
-     while the background image is loading */
-  background-color: #464646;
-  }
-}
-@media only screen and (min-width: 1440px) {
-	#text
-{
-   position: relative;
-  left: 50%;
-  top: 180px;
-
-
- 
-                transform: translateX(-50%) translateY(-90%);
-                text-align: center;
-
-                font-size: 400%;
-				  color: black;
-}
-	body{
-  background-image: url(images/dog3.jpg);
-  
-  /* Background image is centered vertically and horizontally at all times */
-  background-position: center center;
-  
-  /* Background image doesn't tile */
-  background-repeat: no-repeat;
-  
-  /* Background image is fixed in the viewport so that it doesn't move when 
-     the content's height is greater than the image's height */
-  background-attachment: fixed;
-  
-  /* This is what makes the background image rescale based
-     on the container's size */
-  background-size: cover;
-  
-  /* Set a background color that will be displayed
-     while the background image is loading */
-  background-color: #464646;
-  }
-	@media only screen and (min-width: 2560px) {
-	#text
-{
-   position: relative;
-  left: 50%;
-  top: 180px;
-
-
- 
-                transform: translateX(-50%) translateY(-90%);
-                text-align: center;
-
-                font-size: 1000%;
-				  color: black;
-}
-	body{
-  background-image: url(images/dog3.jpg);
-  
-  /* Background image is centered vertically and horizontally at all times */
-  background-position: center center;
-  
-  /* Background image doesn't tile */
-  background-repeat: no-repeat;
-  
-  /* Background image is fixed in the viewport so that it doesn't move when 
-     the content's height is greater than the image's height */
-  background-attachment: fixed;
-  
-  /* This is what makes the background image rescale based
-     on the container's size */
-  background-size: cover;
-  
-  /* Set a background color that will be displayed
-     while the background image is loading */
-  background-color: #464646;
-  }
-}
-
